# My-AI-Security-Project

./: .coderabbit.yaml  .gitignore  AGENTS.md  README.md  llm.md  tmp_capstone_review_slides.txt  tmp_old_ppt_media.txt  가드레일 문서 텍스트 변환·마스킹 기능 설계서  목차.md
PII/: 목차.md  (+1 more)
korean_pii_guardrail_v0_2/: AGENTS.md  MANIFEST.md  README.md  TEAM_AGENT_SETUP_GUIDE.md  pyproject.toml  목차.md  히스토리.md
korean_pii_guardrail_v0_2/api/: openapi.yaml
korean_pii_guardrail_v0_2/api_service/: README.md  __init__.py  app.py  crypto.py  database.py  datasets.py  models.py  service.py
korean_pii_guardrail_v0_2/configs/: context_rules.yaml  detectors.yaml  dictionaries.yaml  entities.yaml  josa_rules.yaml  policy_profiles.yaml  scoring.yaml
korean_pii_guardrail_v0_2/demo/: README.md  app.py  pipeline_trace.py  requirements.txt
korean_pii_guardrail_v0_2/docs/: 00_PROJECT_PLAN.md  01_REQUIREMENTS_SPEC.md  02_ARCHITECTURE_SPEC.md  03_SCORING_POLICY_SPEC.md  04_CONTEXT_POLICY_SPEC.md  05_MASKING_POLICY_SPEC.md  06_INTERFACE_SPEC.md  07_IMPLEMENTATION_ROADMAP.md  08_EVALUATION_PLAN.md  09_COMPLIANCE_AND_AUDIT_SPEC.md  10_DEVELOPMENT_HANDOFF.md  11_ANNOTATION_GUIDELINE.md  12_SCOPE_CHANGE_NOTE.md  13_GITHUB_OPERATIONS_AND_EVIDENCE_GUIDE.md  14_NER_DESIGN_v1.md  15_DOCUMENT_INPUT_PREPROCESSING_DESIGN.md  15_FALSE_POSITIVE_ANALYSIS_AND_TEST_EXPANSION_PLAN.md  16_GENERALIZATION_REVIEW_RESOLUTION.md  17_NER_BACKLOG_FROM_GUARDRAIL_EVAL.md  19_M4_SCOPE_LOCK_NOTE.md  20_M4_PRIOR_SWEEP_AUDIT.md  21_M4_QUALITY_GATES_SPEC.md  context_domain_profile_notes_v1.md  customer_side_context_calibration_runbook_v1.md
korean_pii_guardrail_v0_2/reports/: ablation_demo.json  ablation_v0_2.json  audit_safety_release_gate_m4_phase5_after_v1.json  audit_safety_release_gate_v0_2.json  audit_safety_stage1_person_name_expanded.json  audit_safety_stage1_person_name_seed.json  audit_safety_stage2_contact_expanded.json  audit_safety_stage3_address_expanded.json  audit_safety_stage4_corporate_rrn_expanded.json  audit_safety_stage5_numeric_identifier_expanded.before.json  audit_safety_stage5_numeric_identifier_expanded.json  audit_safety_v0_2.json  context_anchor_corpus_safety_v1.json  context_calibration_dataset_card_v1.md  context_calibration_safety_v1.json  context_corpus_safety_v1.json  context_delta_sweep_v1.json  context_domain_evidence_v1.json  context_hard_negative_coverage_v1.json  context_hard_negative_coverage_v1.md  (+86 more)
(+447 files in other folders)
