[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-pii-guardrail"
version = "0.2.0"
description = "Single-turn Korean PII detection and masking guardrail skeleton"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "jsonschema>=4.0.0",
]
kiwi = [
  "kiwipiepy>=0.23.1",
]
ner = [
  "transformers>=4.40.0",
  "torch>=2.2.0",
  "safetensors>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
