[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-pii-guardrail"
version = "0.2.0"
description = "Single-turn Korean PII detection and masking guardrail skeleton"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "jsonschema>=4.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "cryptography>=42.0.0",
]
kiwi = [
  "kiwipiepy>=0.23.1",
]
ner = [
  "transformers>=4.40.0",
  "torch>=2.2.0",
  "safetensors>=0.4.0",
]
web = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "cryptography>=42.0.0",
]
adapters = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]
guardrails = [
  "guardrails-ai>=0.5.0",
]
litellm = [
  "litellm>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
markers = [
  "real_data: optional tests that read local external raw datasets without persisting raw values",
]
